src/test/resources/private/typechecking/fail/double_decl/fail05_localMethodParamDouble.jova
class Helper {
}

class Test {

    private int func(int a){ // 6 errors
        int a;
        string a;
        bool a;
        float a;
        char a;
        Helper a;
        return 0;
    }

    private int func(int x, string y, bool z){
        Helper a, b, c;                     // no error;
        Helper x;                           // 1 errors;
        Helper x, y, z;                     // 3 errors;
        string d, e, f, a, b, c, g, h, j;   // 3 errors;

        return 0;
    }
}